--- a/index.html.erb
+++ b/index.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>BC COVID-19 Updates Podcast - Unofficial - Converted from YouTube</title>
+    <title>BC COVID-19 Updates Podcast - Unofficial - NO LONGER UPDATED</title>
     <style>
       html {
         font-family: serif;
@@ -50,8 +50,9 @@
 
     <main>
       <header>
-        <b>This is unofficial</b>. This podcast is automatically generated as a more convenient way to get updates, but may stop working at any time.
+        <b>This no longer updates as the regular briefings have stopped.</b>.
         Please check the official <a href="https://www.youtube.com/user/ProvinceofBC">Province of BC youtube channel</a> for updates and the <a href="http://covid-19.bccdc.ca/">BC CDC website</a> for more information.<br/>
+        Visit <a href="https://gov.bc.ca/getvaccinated">https://gov.bc.ca/getvaccinated</a> for vaccine information.<br/>
         <br/>
         Be Calm, Be Kind, Be Safe
       </header>
